<resources>
    <string name="app_name">Malukhiah</string>
    <string name="welcome_back">Welcome Back!!</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_Email">Continue With Email</string>
    <string name="login_with_social_accounts">Login With Social Accounts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="myprofile">My Profile</string>
    <string name="membership">Membership</string>
    <string name="invitefrind">Invite Friends</string>
    <string name="shareMyProfile">Share My Profile</string>
    <string name="abouttheapp">About The App</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termofuse">Term of Use</string>
    <string name="contactus">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="whatdoyouwanttoeat">What do you want to eat</string>
    <string name="saudi_kichen">Saudi Kitchen</string>
    <string name="palistinian_kitchen">Palestinian Kitchen</string>
    <string name="iraqi_kitchen">Iraqi Kitchen</string>
    <string name="lorum_text">Lorem Ipsum has been the industrys standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</string>
    <string name="lorum_small">Lorem Ipsum has been the industrys standard dummy text  since the  since the</string>
    <string name="help">Help</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="blocklist">Block List</string>
    <string name="notification">Notification</string>
    <string name="myfavad">MyFavAd</string>
    <string name="myad">My Adv</string>
    <string name="postyourad">Post Your Ads</string>

    <string name="editprofile">Edit Profile</string>
    <string name="areyousureyouwantremovead">Are you sure you want remove this adv from your favorites list?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="mypurchasead">My Purchase Ads</string>
    <string name="google_maps_key">AIzaSyCCSSZ-Z6yskEq1L9NjH4_AUt6aUZQr_IE</string>

    <string name="recentlyserach">Recently Search</string>
    <string name="recentlyview">Recently Viewed Ads</string>

    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="change_country">Change Country</string>
    <string name="jordan">Jordan</string>
    <string name="soudiarabia">Saudi Arabia</string>
    <string name="chatlist">Chat List</string>
    <string name="email_address">Email Address</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_here">Login Here</string>
    <string name="new_user">New user?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sell_amp_buy_home_made_food_n_and_services"><![CDATA[Sell & Buy Home made Food \n and Services]]></string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="login">Login</string>
    <string name="hello">hello</string>
    <string name="hey">hey!</string>
    <string name="contact_form">Contact Form</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_and_exit">Save And Exit</string>
    <string name="filters">Filters</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="desserts">Desserts</string>
    <string name="parties_amp_gifts"><![CDATA[Parties & Gifts]]></string>
    <string name="price_rage">Price Rage</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="distance">Distance</string>
    <string name="distance_range_any">Distance range : Any</string>
    <string name="filter">Filter</string>
    <string name="password_will_send_to_your_email_address_n_kindly_check_and_login_again">Password Will Send To Your Email Address \n Kindly Check And Login Again</string>
    <string name="rose_hunter">Rose Hunter</string>
    <string name="viewed">Viewed</string>
    <string name="post_a_free_ad">Post a Free Ad</string>
    <string name="recently_viewed_adv">Recently Viewed Adv</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="history">History</string>
    <string name="my_ads">My Ads</string>
    <string name="my_purchase">My Purchase</string>
    <string name="my_fav_adv">My Fav. Adv</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="settings">Settings</string>
    <string name="unblock">Unblock</string>
    <string name="blocklist_04">Blocklist (04)</string>
    <string name="follow_back">Follow Back</string>
    <string name="followers_02">Followers (02)</string>
    <string name="following">Following</string>
    <string name="followings_02">Followings (02)</string>
    <string name="suggestion_people">Suggestion People</string>
    <string name="today_s_highlight">Today\'s Highlight</string>
    <string name="explore_from_categories">Explore From Categories</string>
    <string name="buy_now">Buy Now</string>
    <string name="completed">Completed</string>
    <string name="now">Now</string>
    <string name="follow">Follow</string>
    <string name="report">Report</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="related_products">Related Products</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="search_here">Search Here</string>
    <string name="what_s_on_your_shopping_list_today">What\'s On your shopping list today?</string>
    <string name="your_current_location">Your current location</string>

    <string name="address_cant_empty">Address can\'t empty</string>
    <string name="username_cant_empty">Username can\'t empty</string>
    <string name="email_cant_empty">Email can\'t empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_cant_empty">Password  can\'t empty</string>
    <string name="mobile_number_cant_empty">Mobile No. Can\'t Empty</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="dob_cant_empty">DOB can\'t empty</string>
    <string name="city_cant_empty">City can\'t empty</string>
    <string name="pass_digit_must_be_greater_than_six">Password digits must be greater than six</string>
    <string name="chek_network_connection">Check Network Connection</string>
    <string name="name_cannot_empty">Name can\'t empty</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="select_picture">Select Picture</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="full_name_cant_empty">Full name can\'t empty </string>
    <string name="invalid_fname">Invalid full name</string>
    <string name="server_errors">Something Went Wrong</string>
    <string name="select_gender">Select Gender</string>
    <string name="plz_check_your_intrenet_text"> Please check internet </string>


</resources>
