<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="12sp"
    app:cardElevation="2sp">


    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10sp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_height="@dimen/_25sdp"
            android:layout_width="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/icon_cross"
            android:layout_alignParentEnd="true"
            android:id="@+id/ivlogoutCloseId"
            android:layout_alignParentRight="true" />


        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/ivlogoutCloseId"
            android:orientation="vertical"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/black_clr"
                android:layout_gravity="center"
                android:gravity="start"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/change_language"
                android:textSize="@dimen/_20sdp">
            </androidx.appcompat.widget.AppCompatTextView>


            <RelativeLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black_clr"
                    android:text="@string/english"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="italic"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/cb_english"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <View android:layout_height="@dimen/_1sdp"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorGray"/>


            <RelativeLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black_clr"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/arabic"
                    android:textStyle="italic"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/cb_arabic"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>