<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBackForgetId"
                    style="@style/toolbarArrowStyle"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_20sdp">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/app_logo" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/playlist_script"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textFontWeight="600"
                    android:textSize="@dimen/_13sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@color/colorWhite"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="@dimen/_30sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        android:weightSum="2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_weight="1.82"
                            android:background="@android:color/transparent"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/sf_pro_display_regular"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:textSize="@dimen/_13sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivUserImageId"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_6sdp"
                            android:layout_weight=".15"
                            android:background="@drawable/ic_email" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/sf_pro_display_light"
                    android:gravity="center"
                    android:text="@string/password_will_send_to_your_email_address_n_kindly_check_and_login_again"
                    android:textColor="@color/black_clr"
                    android:textFontWeight="600"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textFontWeight="600"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>